fix horizontal scroll

--- a/public/Assets/css/view.css
+++ b/public/Assets/css/view.css
@@ -39,6 +39,7 @@ canvas {
 #aboutMe {
     padding-top: 50px;
     padding-bottom: 50px;
+    overflow-x:hidden;
 }
 
 
@@ -46,6 +47,7 @@ canvas {
     background-color: #f5f5f5;
     padding-top:50px;
     padding-bottom:50px;
+    overflow-x:hidden;
 }
 
 #contactMe {
